[project]
name = "outdatenot"
version = "0.1.0"
description = "GitHub App for validating repository setup instructions"
authors = [{name = "Your Name", email = "your.email@example.com"}]
readme = "README.md"
requires-python = ">=3.9"

dependencies = [
    "fastapi[standard]>=0.128.0",
    "sqlalchemy>=2.0.0",
    "alembic>=1.16.0",
    "redis>=7.0.0",
    "pydantic>=2.12.0",
    "uvicorn>=0.39.0",
    "python-dotenv>=1.2.0",
    "pydantic-settings>=2.11.0",
    "sqlmodel>=0.0.34",
    "psycopg2-binary>=2.9.11",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.4.0",
    "black>=25.11.0",
    "mypy>=1.19.0",
]

[project.urls]
Homepage = "https://github.com/yourusername/outdatenot"
Repository = "https://github.com/yourusername/outdatenot"
Issues = "https://github.com/yourusername/outdatenot/issues"


